# ros2_jetbot_tools

./: README.md  package.xml  setup.py
docker/: Dockerfile  build.sh  requirements.txt  run.sh  start_ros_shell.sh
docs/: JetBot_lidar.drawio  depth_camera_avoidance.md  lidar_avoidance.md  nav2_tf2_tracking.md  object_detection_distance.md  object_detection_tracking.md  setup.md  voice_activated_copilot.md
jetbot_action_interface/: CMakeLists.txt  package.xml
jetbot_action_server/: package.xml  setup.cfg  (+1 more)
jetbot_tools/: package.xml  setup.cfg  setup.py
jetbot_tools/include/: detectnet_result_utility.py  lidar_utilities.py  node_parameter_utility.py  object_tracker.py  robot_acton_utility.py  tf2_utilities.py
jetbot_tools/launch/: camera_img_resize.launch.py  compressed_image_republish.launch.py  depth_vision_avoidance.launch.py  detect_copilot.launch.py  follow_copilot.launch.py  jetbot_camera.launch.py  laser_avoidance.launch.py  pointcloud_avoidance.launch.py
jetbot_tools/param/: depth_vision_avoidance_params.yaml  follow_copilot_params.yaml  follow_copilot_params_v2.yaml  jetbot_voice_copilot_params.yaml  laser_avoidance_params.yaml  laser_avoidance_sim_params.yaml  pointcloud_avoidance_params.yaml  pointcloud_avoidance_params_sim.yaml
jetbot_tools/script/: calibrate_angular.py  calibrate_linear.py  compressed_image_republisher.py  depth_vision_avoidance.py  detect_copilot.py  follow_copilot.py  jetbot_tools_copilot.py  laser_avoidance.py  llm_chat_agent.py  llm_vision_agent.py  pointcloud_avoidance.py  ros2_image_subscriber.py  tf2_listener_copilot.py
(+21 files in other folders)
