<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_tools</name>
  <version>0.0.0</version>
  <description>Basic OpenCV-ROS2 nodes</description>
  <maintainer email="jetbot@todo.todo">jetbot</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv-python</depend>
  <depend>tf2_ros</depend>
  <depend>zmq</depend>
  <depend>numpy</depend>
  <depend>sklearn</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
